[signal] Custom adaptations to signal-cli
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>