@@ -6,22 +6,26 @@ import java.util.Base64;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class LegacyStickerStore {
 
     public static void migrate(Storage storage, StickerStore stickerStore) {
         final var packIds = new HashSet<StickerPackId>();
+        @SuppressWarnings("null")
         final var stickers = storage.stickers.stream().map(s -> {
+            @SuppressWarnings("null")
             var packId = StickerPackId.deserialize(Base64.getDecoder().decode(s.packId));
             if (packIds.contains(packId)) {
                 // Remove legacy duplicate packIds ...
-                return null;
+                return Optional.<StickerPack>empty();
             }
             packIds.add(packId);
             var packKey = Base64.getDecoder().decode(s.packKey);
             var installed = s.installed;
-            return new StickerPack(-1, packId, packKey, installed);
-        }).filter(Objects::nonNull).toList();
+            return Optional.of(new StickerPack(-1, packId, packKey, installed));
+        }).map(Optional::get).filter(Objects::nonNull).collect(Collectors.toList());
 
         stickerStore.addLegacyStickers(stickers);
     }
